# Soleil

./: .clang-format  .gitignore  CMakeLists.txt  README.adoc  debug_main.cpp  main.cpp  metal_renderer.h  staircase.exr
Scenes/HW2/: test1.ascii
Scenes/Tungsten/bathroom/: LICENSE.txt  scene.json  scene_lowlowres.json  scene_lowres.json
Scenes/Tungsten/bathroom/models/: Mesh000.wo3  Mesh001.wo3  Mesh002.wo3  Mesh003.wo3  Mesh004.wo3  Mesh005.wo3  Mesh006.wo3  Mesh007.wo3  Mesh008.wo3  Mesh009.wo3  Mesh010.wo3  Mesh011.wo3  Mesh012.wo3  Mesh013.wo3  Mesh014.wo3  Mesh015.wo3  Mesh016.wo3  Mesh017.wo3  Mesh018.wo3  Mesh019.wo3  Mesh020.wo3  Mesh021.wo3  Mesh022.wo3  Mesh023.wo3  Mesh024.wo3  Mesh025.wo3  Mesh026.wo3  Mesh027.wo3  Mesh028.wo3  Mesh029.wo3  Mesh030.wo3  Mesh031.wo3  Mesh032.wo3  Mesh033.wo3  Mesh034.wo3  Mesh035.wo3  Mesh036.wo3  Mesh037.wo3  Mesh038.wo3  Mesh039.wo3  (+815 more)
Scenes/Tungsten/car/: LICENSE.txt  TungstenRender.exr  scene.json
Scenes/Tungsten/car/models/: Mesh000.wo3  Mesh001.wo3  Mesh002.wo3  Mesh003.wo3  Mesh004.wo3  Mesh005.wo3  Mesh006.wo3  Mesh007.wo3  Mesh008.wo3  Mesh009.wo3  Mesh010.wo3  Mesh012.wo3  Mesh013.wo3  Mesh014.wo3  Mesh015.wo3  Mesh016.wo3  Mesh017.wo3  Mesh018.wo3  Mesh019.wo3  Mesh020.wo3  Mesh022.wo3  Mesh023.wo3  Mesh024.wo3  Mesh025.wo3  Mesh026.wo3  Mesh028.wo3  Mesh029.wo3  Mesh030.wo3  Mesh031.wo3  Mesh032.wo3  Mesh033.wo3  Mesh034.wo3  Mesh035.wo3  Mesh036.wo3  Mesh037.wo3  Mesh038.wo3  Mesh039.wo3  Mesh040.wo3  Mesh041.wo3  Mesh042.wo3  (+5 more)
Scenes/Tungsten/car2/: LICENSE.txt  scene.json
Scenes/Tungsten/car2/models/: Mesh000.wo3  Mesh001.wo3  Mesh002.wo3  Mesh003.wo3  Mesh004.wo3  Mesh005.wo3  Mesh006.wo3  Mesh007.wo3  Mesh008.wo3  Mesh009.wo3  Mesh010.wo3  Mesh011.wo3  Mesh012.wo3  Mesh013.wo3  Mesh014.wo3  Mesh015.wo3  Mesh016.wo3  Mesh017.wo3  Mesh018.wo3  Mesh019.wo3  Mesh020.wo3  Mesh021.wo3  Mesh022.wo3  Mesh023.wo3  Mesh024.wo3  Mesh025.wo3  Mesh026.wo3  Mesh027.wo3  Mesh028.wo3  Mesh029.wo3  Mesh030.wo3  Mesh031.wo3  Mesh032.wo3  Mesh033.wo3  Mesh034.wo3  Mesh035.wo3  Mesh036.wo3  Mesh037.wo3  Mesh038.wo3  Mesh039.wo3  (+21 more)
Scenes/Tungsten/christen-dragon/: scene.json
Scenes/Tungsten/classroom/models/: Mesh000.wo3  Mesh001.wo3  Mesh002.wo3  Mesh003.wo3  Mesh004.wo3  Mesh005.wo3  Mesh006.wo3  Mesh007.wo3  Mesh008.wo3  Mesh009.wo3  Mesh010.wo3  Mesh011.wo3  Mesh012.wo3  Mesh013.wo3  Mesh014.wo3  Mesh015.wo3  Mesh016.wo3  Mesh017.wo3  Mesh018.wo3  Mesh019.wo3  Mesh020.wo3  Mesh021.wo3  Mesh022.wo3  Mesh023.wo3  Mesh024.wo3  Mesh025.wo3  Mesh026.wo3  Mesh027.wo3  Mesh028.wo3  Mesh029.wo3  Mesh030.wo3  Mesh031.wo3  Mesh032.wo3  Mesh033.wo3  Mesh034.wo3  Mesh035.wo3  Mesh036.wo3  Mesh037.wo3  Mesh038.wo3  Mesh039.wo3  (+39 more)
Scenes/Tungsten/coffee/: LICENSE.txt
Scenes/Tungsten/coffee/models/: Mesh000.wo3  Mesh001.wo3  Mesh002.wo3  Mesh003.wo3  Mesh004.wo3  Mesh005.wo3  Mesh006.wo3  Mesh007.wo3  Mesh008.wo3  Mesh009.wo3  Mesh010.wo3  Mesh011.wo3  Mesh012.wo3  Mesh013.wo3  Mesh014.wo3  Mesh015.wo3  Mesh016.wo3  Mesh017.wo3  Mesh018.wo3  Mesh019.wo3
Scenes/Tungsten/cornell-box/: scene.json  scene_without_cubes.json
Scenes/Tungsten/dining-room/: scene.json
Scenes/Tungsten/dragon/: area_light.json  scene.json
Scenes/Tungsten/dragon/models/: Mesh000.wo3  Mesh001.wo3  Mesh002.wo3  Mesh003.wo3  Mesh004.wo3  (+7 more)
Scenes/Tungsten/house/: LICENSE.txt  scene.json  scene_lowres.json
Scenes/Tungsten/living-room-3/: scene.json
Scenes/Tungsten/material-testball/: scene.json  scene_lowres.json
Scenes/Tungsten/staircase/: scene.json  scene_lowlowres.json  scene_lowres.json
Scenes/Tungsten/teapot/: LICENSE.txt  scene.json  scene_lowres.json  scene_lowres_wo_floor.json  scene_only_floor_lowres.json  scene_wo_environment_map.json  scene_wo_environment_map_lowres.json
Scenes/Tungsten/teapot-full/: scene.json
Scenes/Tungsten/veach-ajar/: LICENSE.txt  scene.json  scene_simplified.json  scene_simplified_lowres.json
Scenes/Tungsten/veach-bidir/: LICENSE.txt  scene.json  scene_small.json
Scenes/Tungsten/veach-mis/: scene.json
Scenes/xml/: cornellbox_ldr.xml  cornellbox_ldr_small.xml
include/: KDTree.hpp  aabb.hpp  area_light.hpp  camera.hpp  dir_light.hpp  integrator.hpp  kd_tree.hpp  light.hpp  material.hpp  mc_integrator.hpp  payload.hpp  photon.hpp  photon_integrator.hpp  photon_map.hpp  ray.hpp  renderer.hpp  scene.hpp  scene_io.h  scene_loaders.hpp  tinyobjloader.hpp  utils.hpp  vertex.hpp
include/bsdfs/: bsdf.hpp  cooktorrance.hpp  lambert.hpp  orennayar.hpp
include/bsdfs/fresnel/: dielectric.hpp
include/bsdfs/microfacet_distribution/: beckmann.hpp
include/core/: utils.hpp
include/integrators/: mc_integrator.hpp  metal.hpp  progressive_integrator.hpp
include/lights/: area.hpp  directional.hpp  light.hpp  point.hpp
include/loaders/: random_spheres.hpp  scene_loaders.hpp
include/materials/: base.hpp  emissive.hpp  matte.hpp  mirror.hpp  orennayar.hpp  plastic.hpp  texture.hpp
include/primitives/: emissive_mesh.hpp  mesh.hpp  quad.hpp  sphere.hpp
include/textures/: checkerboard.hpp  sampler2D.hpp  single_color.hpp  texture.hpp
include/tonemappers/: gamma.hpp  reinhard.hpp
logs/: basic.txt
outputs/: staircase.exr
src/: KDTree.cpp  kd_tree.cpp  material.cpp  mc_integrator.cpp  mesh.cpp  photon_integrator.cpp  photon_map.cpp  renderer.cpp  scene.cpp  scene_io.cpp  sphere.cpp
src/bsdfs/: cooktorrance.cpp  lambert.cpp  orennayar.cpp
src/bsdfs/fresnel/: dielectric.cpp
src/bsdfs/microfacet_distributions/: beckmann.cpp
src/core/: utils.cpp
src/integrators/: mc_integrator.cpp  metal.cpp  progressive_integrator.cpp
src/lights/: area.cpp  directional.cpp  point.cpp
src/materials/: base.cpp  lambert.cpp  matte.cpp  mirror.cpp  orennayar.cpp  plastic.cpp
src/primitives/: quad.cpp
src/scene_loaders/: mitsuba_loader.cpp  obj_loader.cpp  tungsten_loader.cpp  veach_loader.cpp
src/shaders/: shader.cpp
src/textures/: checkerboard.cpp  texture.cpp
src/tonemappers/: gamma.cpp  reinhard.cpp
tests/: CMakeLists.txt  bounding_box_test.cpp  geometry_tests.cpp  microfacet_test.cpp  scene_test.cpp  tests_main.cpp
(+1260 files in other folders)
